Update: frontend color fix - in relation to contrast with backshift

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -105,7 +105,7 @@ canvas {
 }
 
 .container button {
-  background-color: #512da8;
+  background-color: #2d9ca8;
   color: #fff;
   font-size: 12px;
   padding: 10px 45px;
@@ -221,9 +221,9 @@ canvas {
 }
 
 .toggle {
-  background-color: #512da8;
+  background-color: #2d9ca8;
   height: 100%;
-  background: linear-gradient(to right, #5c6bc0, #512da8);
+  background: linear-gradient(to right, #207f8a,  #2d9ca8);
   color: #fff;
   position: relative;
   left: -100%;
